# hub

./: .env.local  .gitignore  .python-version  app.py  config.py  database.py  ecosystem.config.js  main.py  models.py  piccolo_conf.py  pyproject.toml  requirements.txt  ruff.toml  scheduler.py  schemas.py
api/: main.py  requirements.txt
api/dependencies/: auth.py
api/models/: database.py
api/routes/: __init__.py  ddns.py  debug.py  domain.py  user.py
api/services/: __init__.py  domain.py  keyring.py  user.py
api/utils/: __init__.py  jwt.py
models/: __init__.py  auth.py  crud.py  db.py  domain.py  keyring.py  user.py
prisma/: schema.prisma
prisma/migrations/20250403025114_init/: migration.sql
public/: domain.css
routers/: auth.py  ddns.py  domain.py  list.py  oauth.py  public.py  swas.py  user.py  webhooks.py
routes/: ddns.py  domain.py  user.py
schedulers/: main.py  utils.py
schedulers/apps/: swas.py
schemas/: user.py
src/: main.py  models.py  scheduler.py
src/routers/: auth.py  ddns.py  oauth.py  swas.py
src/utils/: logging.py  serialize.py
templates/: domain.html
utils/: __init__.py  b64.py  decorators.py  extra.py  http_client.py  logging.py
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
web/pages/: DomainManager.jsx
web/src/: App.jsx
web/src/pages/: DomainManager.jsx  Home.jsx
