[project]
name = "apihub"
version = "0.0.1"
description = "some api here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "apscheduler==3.11.0",
    "asyncpg==0.30.0",
    "black==25.1.0",
    "certifi==2024.12.14",
    "click==8.1.8",
    "colorama==0.4.6",
    "decorator==5.1.1",
    "dnspython==2.4.2",
    "docstring-parser==0.16",
    "email-validator==2.1.0.post1",
    "faker==37.0.0",
    "fastapi==0.115.11",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "inflection==0.5.1",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "piccolo==1.24.0",
    "platformdirs==4.3.6",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "sentry-sdk==2.23.1",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "targ==0.4.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "tzlocal==5.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
]
